--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <p>FOPM01</p>
     <h3>Program:</h3>
     <p>BSIT</p>
+    <img
+      src="/random-picture.png"
+      alt="Random Picture"
+      width="300"
+      height="300"
+    />
   </body>
 </html>
